finished tests and controllers